fixed memory leak with scaling slider, changed styles from return to variable to make code more readable

--- a/src/components/Pages/Main/Post/Post.module.scss
+++ b/src/components/Pages/Main/Post/Post.module.scss
@@ -69,9 +69,6 @@
   }
 }
 
-.Post.fullscreen {
-  width: calc(50vw - 20px);
-}
 
 .Post.open {
   width: 100vw;
@@ -87,4 +84,12 @@
 
 .Post.disAnim {
   transition: none;
+}
+
+
+.smallAdapt{
+  float: left
+}
+.Fullscreen {
+  width: calc(50vw - 20px);
 }
